Business and data understanding

--- a/index.ipynb
+++ b/index.ipynb
@@ -5,24 +5,343 @@
    "id": "bd4a045e-e3d2-480a-9fb6-7bc81626c7c6",
    "metadata": {},
    "source": [
-    "# Natural Language Processing (NLP) \n",
-    "# Project : Sentiment Analysis on Tweets about Apple and Google Products\n"
+    "# Natural Language Processing (NLP) Project : Sentiment Analysis on Tweets about Apple and Google Products\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad86e264",
+   "metadata": {},
+   "source": [
+    "## Overview\n",
+    "This project aims to analyze Twitter sentiment about Apple and Google products using Natural Language Processing (NLP). The dataset contains tweets labeled as positive, negative, or neutral. By building a sentiment analysis model, we aim to categorize the sentiment of tweets accurately and gain insights into public perception of these tech giants' products."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3aa4054",
+   "metadata": {},
+   "source": [
+    "## Business Understanding\n",
+    "### Business Problem\n",
+    "Understanding customer sentiment is critical for businesses to gauge public opinion and improve products or services. For Apple and Google, analyzing Twitter sentiment can provide actionable insights to enhance user satisfaction and market strategies.\n",
+    "\n",
+    "### Stakeholders\n",
+    "1. `Marketing Teams`:\n",
+    "Use insights to create targeted campaigns focusing on products with positive sentiment.\n",
+    "Address negative feedback to improve brand perception.\n",
+    "2. `Product Teams`:\n",
+    "Identify areas of improvement for specific products (e.g., iPhone or Pixel).\n",
+    "3. `Executives`:\n",
+    "Make data-driven decisions for product launches, pricing strategies, and market positioning.\n",
+    "\n",
+    "### Objectives\n",
+    "1. Build a model to classify the sentiment of tweets into positive, negative, or neutral categories.\n",
+    "2. Evaluate model performance using suitable metrics.\n",
+    "3. Provide insights and recommendations based on the analysis results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "868ef37f",
+   "metadata": {},
+   "source": [
+    "## Data Understanding\n",
+    "Here, we intend to comprehensively explore and analyze our dataset to gain insights into its structure, content, and quality."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3b766d2e-c2db-4bf2-80c2-cc1064490a2a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import necessary libraries\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d17fd9a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the data\n",
+    "df = pd.read_csv('sentiment.csv', encoding='unicode_escape')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b5d4d566",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>emotion_in_tweet_is_directed_at</th>\n",
+       "      <th>is_there_an_emotion_directed_at_a_brand_or_product</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>.@wesley83 I have a 3G iPhone. After 3 hrs twe...</td>\n",
+       "      <td>iPhone</td>\n",
+       "      <td>Negative emotion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>@jessedee Know about @fludapp ? Awesome iPad/i...</td>\n",
+       "      <td>iPad or iPhone App</td>\n",
+       "      <td>Positive emotion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>@swonderlin Can not wait for #iPad 2 also. The...</td>\n",
+       "      <td>iPad</td>\n",
+       "      <td>Positive emotion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>@sxsw I hope this year's festival isn't as cra...</td>\n",
+       "      <td>iPad or iPhone App</td>\n",
+       "      <td>Negative emotion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>@sxtxstate great stuff on Fri #SXSW: Marissa M...</td>\n",
+       "      <td>Google</td>\n",
+       "      <td>Positive emotion</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          tweet_text  \\\n",
+       "0  .@wesley83 I have a 3G iPhone. After 3 hrs twe...   \n",
+       "1  @jessedee Know about @fludapp ? Awesome iPad/i...   \n",
+       "2  @swonderlin Can not wait for #iPad 2 also. The...   \n",
+       "3  @sxsw I hope this year's festival isn't as cra...   \n",
+       "4  @sxtxstate great stuff on Fri #SXSW: Marissa M...   \n",
+       "\n",
+       "  emotion_in_tweet_is_directed_at  \\\n",
+       "0                          iPhone   \n",
+       "1              iPad or iPhone App   \n",
+       "2                            iPad   \n",
+       "3              iPad or iPhone App   \n",
+       "4                          Google   \n",
+       "\n",
+       "  is_there_an_emotion_directed_at_a_brand_or_product  \n",
+       "0                                   Negative emotion  \n",
+       "1                                   Positive emotion  \n",
+       "2                                   Positive emotion  \n",
+       "3                                   Negative emotion  \n",
+       "4                                   Positive emotion  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# View the first five rows of the dataset to see if loading has been done correctly\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d15b8a5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9093 entries, 0 to 9092\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column                                              Non-Null Count  Dtype \n",
+      "---  ------                                              --------------  ----- \n",
+      " 0   tweet_text                                          9092 non-null   object\n",
+      " 1   emotion_in_tweet_is_directed_at                     3291 non-null   object\n",
+      " 2   is_there_an_emotion_directed_at_a_brand_or_product  9093 non-null   object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 213.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# View the overall information of each column\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7fdefbe9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>emotion_in_tweet_is_directed_at</th>\n",
+       "      <th>is_there_an_emotion_directed_at_a_brand_or_product</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>9092</td>\n",
+       "      <td>3291</td>\n",
+       "      <td>9093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>9065</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>RT @mention Marissa Mayer: Google Will Connect...</td>\n",
+       "      <td>iPad</td>\n",
+       "      <td>No emotion toward brand or product</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>5</td>\n",
+       "      <td>946</td>\n",
+       "      <td>5389</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               tweet_text  \\\n",
+       "count                                                9092   \n",
+       "unique                                               9065   \n",
+       "top     RT @mention Marissa Mayer: Google Will Connect...   \n",
+       "freq                                                    5   \n",
+       "\n",
+       "       emotion_in_tweet_is_directed_at  \\\n",
+       "count                             3291   \n",
+       "unique                               9   \n",
+       "top                               iPad   \n",
+       "freq                               946   \n",
+       "\n",
+       "       is_there_an_emotion_directed_at_a_brand_or_product  \n",
+       "count                                                9093  \n",
+       "unique                                                  4  \n",
+       "top                    No emotion toward brand or product  \n",
+       "freq                                                 5389  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summary statistics of columns\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f4550507",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Negative emotion', 'Positive emotion',\n",
+       "       'No emotion toward brand or product', \"I can't tell\"], dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['is_there_an_emotion_directed_at_a_brand_or_product'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76b12846",
+   "metadata": {},
+   "source": [
+    "### Data Overview\n",
+    "The dataset provides comprehensive information about over 9,000 tweets labeled as positive, negative, or neutral.\n",
+    "- **Rows**: 9,093.\n",
+    "- **Columns**: 3.\n",
+    "- **Column Names**: \n",
+    "     - `tweet_text` - Content of the tweet..\n",
+    "     - `emotion_in_tweet_is_directed_at` - Subject of the tweet_text.\n",
+    "     - `is_there_an_emotion_directed_at_a_brand_or_product` - Sentiment label.\n",
+    "- **Data Types**:\n",
+    "     - `Categorical Columns`: All 3 columns.\n",
+    "- **Missing Values**:\n",
+    "     - `tweet_text`: 1 missing value.\n",
+    "     - `emotion_in_tweet_is_directed_at`: 5,802 missing values.\n",
+    "     - `is_there_an_emotion_directed_at_a_brand_or_product`: No missing values.\n",
+    "- **Nunique**:\n",
+    "     - `tweet_text`: 9,065 unique tweets.\n",
+    "     - `emotion_in_tweet_is_directed_at`: 9 unique products.\n",
+    "     - `is_there_an_emotion_directed_at_a_brand_or_product`: 4 unique sentiment labels ('Negative emotion', 'Positive emotion', 'No emotion toward brand or product', 'I can't tell')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "learn-env",
    "language": "python",
    "name": "python3"
   },
@@ -36,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
