--- a/index (4).ipynb
+++ b/index (4).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sentiment Analysis on Tweets about Apple and Google Products"
+    "# Natural Language Processing (NLP) Project : Sentiment Analysis on Tweets about Apple and Google Products\n"
    ]
   },
   {
@@ -775,7 +775,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Distribution of Sentiment"
+    "### 1. Distribution of sentiments"
    ]
   },
   {
@@ -835,7 +835,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Distribution of Brand"
+    "### 2. Distribution of Brands"
    ]
   },
   {
@@ -879,7 +879,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Distribution of Sentiment by Brand"
+    "### 3. Distribution of brands according to sentiments"
    ]
   },
   {
@@ -4472,29 +4472,9 @@
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
    "display_name": "Python 3",
-=======
-   "display_name": "Python 3 (ipykernel)",
->>>>>>> origin/main
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.8.5"
-=======
-   "version": "3.11.9"
->>>>>>> origin/main
   }
  },
  "nbformat": 4,
