--- a/index (4).ipynb
+++ b/index (4).ipynb
@@ -796,7 +796,7 @@
    "id": "e0f44908",
    "metadata": {},
    "source": [
-    "### 1. Distribution of sentiments"
+    "### 1. Distribution of sentiment"
    ]
   },
   {
@@ -858,7 +858,7 @@
    "id": "0762c69f",
    "metadata": {},
    "source": [
-    "### 2. Distribution of Brands"
+    "### 2. Distribution of Brand"
    ]
   },
   {
@@ -905,7 +905,7 @@
    "id": "658501a6",
    "metadata": {},
    "source": [
-    "### 3. Distribution of brands according to sentiments"
+    "### 3. Distribution Sentiment by Brand"
    ]
   },
   {
@@ -3384,7 +3384,7 @@
    "id": "a754b2c1",
    "metadata": {},
    "source": [
-    "##### Best Naive Bayes Model"
+    "#### Best Naive Bayes Model"
    ]
   },
   {
@@ -3900,7 +3900,7 @@
    "id": "fc60533e",
    "metadata": {},
    "source": [
-    "##### Best Random Forest Model"
+    "#### Best Random Forest Model"
    ]
   },
   {
@@ -4362,7 +4362,7 @@
    "id": "ce7bad5b",
    "metadata": {},
    "source": [
-    "##### Best SVM Model"
+    "#### Best SVM Model"
    ]
   },
   {
@@ -4586,7 +4586,7 @@
    "id": "5f77b2c0",
    "metadata": {},
    "source": [
-    "##### Voting Classifier"
+    "#### Voting Classifier"
    ]
   },
   {
@@ -4993,11 +4993,17 @@
    "id": "3193f67b",
    "metadata": {},
    "source": [
-    "#### Conclusions\n",
+    "## Conclusion\n",
     "\n",
-    "The __Voting Classifier combining Logistic, Random forest and SVM models__ is recommended as the best model for sentiment analysis on this dataset as it provides the best of all models. While it achieved the highest F1 Score and ROC AUC, the presence of class imbalance and the similarity of words in positive and neutral tweets remained challenges for all models.\n",
-    "\n",
-    "**Recommendations**\n",
+    "The __Voting Classifier combining Logistic, Random forest and SVM models__ is recommended as the best model for sentiment analysis on this dataset as it provides the best of all models. While it achieved the highest F1 Score and ROC AUC, the presence of class imbalance and the similarity of words in positive and neutral tweets remained challenges for all models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1046dae3",
+   "metadata": {},
+   "source": [
+    "## Recommendations\n",
     "\n",
     "Based on the analysis of the sentiment dataset and the performance of multiple models, the following recommendations are provided to optimize sentiment analysis efforts for the business:\n",
     "\n",
@@ -5018,8 +5024,7 @@
     "- **Actionable Insights:** Review common keywords in tweets classified as positive or neutral and refine them. For example, terms like \"good\" and \"okay\" may need additional context to ensure correct classification.\n",
     "- **Enhanced Data Collection:** Better classification on sentiment labels can be achieved by collecting more diverse and detailed data. This can help in distinguishing subtle differences in sentiment expressions. For example, collecting tweets with stronger emotional language can improve model performance.\n",
     "- **Different Data Source:** Consider using additional data sources beyond Twitter to capture a wider range of sentiments and expressions. This can provide a more comprehensive view of customer feedback and improve sentiment analysis accuracy.\n",
-    "- **Deep learning approaches** use advanced deep learning methods like (BERT, transformers) to improve performance or advanced vectorizers wor like word2vec to improve pattern recognition in the dataset.\n",
-    "\n"
+    "- **Deep learning approaches** use advanced deep learning methods like (BERT, transformers) to improve performance or advanced vectorizers wor like word2vec to improve pattern recognition in the dataset."
    ]
   },
   {
@@ -5027,7 +5032,7 @@
    "id": "8a2ba199",
    "metadata": {},
    "source": [
-    "### Model Deployment"
+    "## Model Deployment"
    ]
   },
   {
