--- a/index (4).ipynb
+++ b/index (4).ipynb
@@ -905,7 +905,7 @@
    "id": "658501a6",
    "metadata": {},
    "source": [
-    "### 3. Distribution Sentiment by Brand"
+    "### 3. Distribution of Sentiment by Brand"
    ]
   },
   {
