--- a/index (4).ipynb
+++ b/index (4).ipynb
@@ -1774,7 +1774,8 @@
     "- Logistic Regression\n",
     "- Random Forest\n",
     "- Multinomial Naive Bayes\n",
-    "- Support Vector Machine"
+    "- Support Vector Machine\n",
+    "- Ensemble method"
    ]
   },
   {
